Fix dark mode display

--- a/core_utils/server/style.css
+++ b/core_utils/server/style.css
@@ -22,6 +22,7 @@
     box-sizing: border-box;
 }
 body {
+    background: var(--background-white);
     font-family: 'Open Sans', sans-serif;
     color: var(--text-color);
     margin: 0;
